<resources>
    <string name="app_name">ModeloEvento</string>

    // YOUTUBE PLAYER
    <string name="player_error">Erro ao inicializar o player do YouTube</string>
    <string name="seek_to">Ir para</string>
    <string name="seek_to_hint">Segundos</string>

    <string name="cabecalho_content_description">cabecalho</string>

    <string name="estrutura_p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis lectus, tincidunt et tincidunt non, ultricies fermentum sapien. Fusce interdum, est ac dignissim imperdiet, nibh nunc convallis lorem, et interdum mi justo vitae lorem. Aenean eget accumsan nisi, eget pharetra odio. Vivamus a sem arcu. Morbi bibendum erat dui, id vulputate leo egestas in. Praesent auctor pellentesque odio, ut tincidunt ante eleifend ut. Duis accumsan at sapien vitae finibus. Integer vestibulum sit amet augue in euismod. Integer at pharetra nisi, quis posuere urna. Sed euismod, purus nec aliquet aliquam, nisi ligula eleifend augue, quis egestas ligula leo non leo. Vestibulum efficitur nunc iaculis mi tempus iaculis. Proin eu lectus nec velit elementum pharetra. Proin vehicula mattis tempor. Donec vel nulla turpis. Donec sollicitudin leo vitae magna dictum, a ultricies metus iaculis.</string>
    <string name="estrutura_p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis lectus, tincidunt et tincidunt non, ultricies fermentum sapien. Fusce interdum, est ac dignissim imperdiet, nibh nunc convallis lorem, et interdum mi justo vitae lorem. Aenean eget accumsan nisi, eget pharetra odio. Vivamus a sem arcu. Morbi bibendum erat dui, id vulputate leo egestas in. Praesent auctor pellentesque odio, ut tincidunt ante eleifend ut. Duis accumsan at sapien vitae finibus. Integer vestibulum sit amet augue in euismod. Integer at pharetra nisi, quis posuere urna. Sed euismod, purus nec aliquet aliquam, nisi ligula eleifend augue, quis egestas ligula leo non leo. Vestibulum efficitur nunc iaculis mi tempus iaculis. Proin eu lectus nec velit elementum pharetra. Proin vehicula mattis tempor. Donec vel nulla turpis. Donec sollicitudin leo vitae magna dictum, a ultricies metus iaculis.</string>

    <string name="instagram_open_in_browser">Open in Browser</string>

    <string name="o_evento">O Evento</string>
    <string name="atracoes">Atrações</string>
    <string name="setores">Setores</string>
    <string name="estrutura">Estrutura</string>
    <string name="tickets">Tickets</string>
    <string name="news">News</string>
    <string name="videos">Vídeos</string>
    <string name="instagram">Instagram</string>
    <string name="loja">Loja</string>
    <string name="pontos_de_venda">Pontos de Venda</string>
    <string name="excursoes">Excursões</string>
    <string name="aniversarios">Aniversários</string>
    <string name="campanha">Campanha</string>
    <string name="mapa">Mapa</string>
    <string name="termos_e_condicoes">Termos e Condições</string>

    <string-array name="string_array_menu">
        <item>@string/o_evento</item>
        <item>@string/atracoes</item>
        <item>@string/setores</item>
        <item>@string/estrutura</item>
        <item>@string/tickets</item>
        <item>@string/news</item>
        <item>@string/videos</item>
        <item>@string/instagram</item>
        <item>@string/loja</item>
        <item>@string/pontos_de_venda</item>
        <item>@string/excursoes</item>
        <item>@string/aniversarios</item>
        <item>@string/campanha</item>
        <item>@string/mapa</item>
        <item>@string/termos_e_condicoes</item>
    </string-array>

    <string name="googlemaps_key">AIzaSyDB4g13zjAOtbWNYE6EsM_zqcmX4edi2nc</string>
    <integer name="google_play_version">49</integer>
</resources>
