<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_evento"
            android:icon="@drawable/ic_evento"
            android:title="@string/o_evento"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_atracoes"
            android:icon="@drawable/ic_dj"
            android:title="@string/atracoes"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_setores"
            android:icon="@drawable/ic_setores"
            android:title="@string/setores"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_estrutura"
            android:icon="@drawable/ic_structure"
            android:title="@string/estrutura"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_tickets"
            android:icon="@drawable/ic_tickets"
            android:title="@string/tickets"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_videos"
            android:icon="@drawable/ic_youtube"
            android:title="@string/videos"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_instagram"
            android:icon="@drawable/ic_instagram"
            android:title="@string/instagram"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_loja"
            android:icon="@drawable/ic_store"
            android:title="@string/loja"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_pontos_de_venda"
            android:icon="@drawable/ic_ponto_venda"
            android:title="@string/pontos_de_venda"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_excursoes"
            android:icon="@drawable/ic_excursao"
            android:title="@string/excursoes"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_aniversarios"
            android:icon="@drawable/ic_aniversario"
            android:title="@string/aniversarios"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_campanha"
            android:icon="@drawable/ic_campanha"
            android:title="@string/campanha"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/mapa"
            android:checked="true"/>
        <item
            android:id="@+id/nav_item_termos_e_condicoes"
            android:icon="@drawable/ic_termos"
            android:title="@string/termos_e_condicoes"
            android:checked="true"/>


    </group>

</menu>